// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with custom class name 1`] = `
<div
  className="divider dummy-class-name horizontal"
  data-testid="divider"
/>
`;

exports[`renders correctly with empty props 1`] = `
<div
  className="divider horizontal"
  data-testid="divider"
/>
`;
